--- a/package.json
+++ b/package.json
@@ -12,40 +12,41 @@
     "migrate": "npx bun run src/lib/db/migrate.ts"
   },
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
-    "@supabase/supabase-js": "^2.21.0",
+    "@supabase/supabase-js": "^2.44.4",
     "autoprefixer": "10.4.14",
-    "class-variance-authority": "^0.5.2",
+    "class-variance-authority": "^0.5.3",
     "clsx": "^1.2.1",
-    "dayjs": "^1.11.8",
-    "drizzle-orm": "^0.27.0",
+    "dayjs": "^1.11.12",
+    "drizzle-orm": "^0.27.2",
+    "encoding": "^0.1.13",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "lucide-react": "^0.172.0",
     "nanoid": "^4.0.2",
-    "next": "^13.4.7",
-    "pg": "^8.11.1",
-    "pg-pool": "^3.6.1",
+    "next": "^13.5.6",
+    "pg": "^8.12.0",
+    "pg-pool": "^3.6.2",
     "postcss": "8.4.21",
-    "postgres": "^3.3.5",
+    "postgres": "^3.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "sonner": "^0.3.2",
-    "tailwind-merge": "^1.12.0",
+    "react-icons": "^4.12.0",
+    "sonner": "^0.3.5",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.1",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20.3.1",
-    "@types/pg": "^8.10.2",
-    "@types/pg-pool": "^2.0.3",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "drizzle-kit": "^0.19.2",
-    "typescript": "^5.1.3"
+    "@types/node": "^20.14.12",
+    "@types/pg": "^8.11.6",
+    "@types/pg-pool": "^2.0.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "drizzle-kit": "^0.19.13",
+    "typescript": "^5.5.4"
   }
 }
