--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.44.4",
     "autoprefixer": "10.4.14",
+    "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.5.3",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.12",
@@ -38,7 +39,8 @@
     "sonner": "^0.3.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "utf-8-validate": "^6.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.14.12",
